--- a/oscar/templates/oscar/basket/summary.html
+++ b/oscar/templates/oscar/basket/summary.html
@@ -109,6 +109,14 @@ Your basket is currently empty - go and <a href="{% url oscar-products %}">buy s
 
 {% endif %}
 
+<form action="{% url oscar-basket %}" method="post">
+    {% csrf_token %}
+    <input type="hidden" name="action" value="bulk_load" />
+    <label for="source_text">Enter block of text containing SKUs</label>
+    <textarea name="source_text" rows="5" cols="50" id="source_text"></textarea>
+    <input type="submit" value="Add items to basket" />
+</form>
+
 {% if saved_basket and not saved_basket.is_empty %}
 
 <h3>To buy later</h3>
