Similar to the ProductApplication, CustomerApplication ties all of the customer views and URLs into a single class which can be extended. We get some lovely URL namespacing for free.

--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -14,7 +14,7 @@
             </form>
             
             {% if user.is_authenticated %}
-                <a href="{% url oscar-customer-profile %}">Profile</a>
+                <a href="{% url customer:summary %}">Profile</a>
                 <a href="">Logout</a>
             {% else %}
                 <a href="">Login</a>
