--- a/oscar/templates/oscar/checkout/gateway.html
+++ b/oscar/templates/oscar/checkout/gateway.html
@@ -9,7 +9,7 @@
 
 <dl>
     <dt>
-        <a href="">Register</a> or <a href="{% url oscar-customer-login %}">log-in</a>
+        <a href="">Register</a> or <a href="{% url customer:login %}">log-in</a>
     </dt>
     <dl>
         <p>Logging in now will give you access to your address book and ensure your
@@ -22,7 +22,7 @@
         <p>You can checkout without signing in or registering.  You will be given the opportunity to 
            register when checkout is complete.</p>
     </dl>
-</ol>
+</dl>
 
 {% endblock content %}
 
