--- a/oscar/templates/oscar/customer/address-book.html
+++ b/oscar/templates/oscar/customer/address-book.html
@@ -14,12 +14,8 @@
     {% for address in addresses %}
     <li>
         {{ address.summary }}
-        <a href="{% url oscar-customer-address address.id %}">Edit</a> | 
-        <form action="{% url oscar-customer-address address.id %}" method="post">
-            {% csrf_token %}
-            <input type="hidden" name="action" value="delete" />
-            <input type="submit" value="Delete" />
-        </form>
+        <a href="{% url customer:address address.id %}">Edit</a> | 
+		<a href="{% url customer:address-delete address.id %}">Delete</a>
     </li>
     {% endfor %}
 </ul>
