Middleware baskets now working for anon users

--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -29,6 +29,9 @@
             <a href="/admin/promotions/pagemerchandisingblock/add/?page_url={{ url_path }}" >merchandising block</a>
             to this page.
             
+            Basket total: {{ basket.total_incl_tax|currency }}
+            <a href="{% url oscar-basket %}">View basket</a>
+            
             {% block header %}
             {% endblock %}
         </div>
