--- a/oscar/templates/oscar/basket/summary.html
+++ b/oscar/templates/oscar/basket/summary.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% load currency_filters %}
+{% load thumbnail %}
 
 {% block header %}
 <h2>Basket</h2>
@@ -16,6 +17,7 @@ Your basket is currently empty - go and <a href="{% url oscar-products %}">buy s
 <h3>To buy now</h3>
 <table>
     <tr>
+        <th></th>
         <th>Product</th>
         <th>Availability</th>
         <th>Quantity</th>
@@ -26,6 +28,13 @@ Your basket is currently empty - go and <a href="{% url oscar-products %}">buy s
     </tr>
     {% for line in basket.all_lines %}
     <tr>
+        <td>
+            {% for image in line.product.images.all %}
+                {% thumbnail image.original "100" crop="center" as im %}
+                    <a href="{{ line.product.get_absolute_url }}"><img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"></a>
+                {% endthumbnail %}
+            {% endfor %}
+        </td>
         <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
         <td>{{ line.product.stockrecord.availability }}</td>
         <td>
@@ -68,12 +77,12 @@ Your basket is currently empty - go and <a href="{% url oscar-products %}">buy s
     {% endfor %}
     {% for discount in basket.discounts %}
     <tr>
-        <td colspan="6">{{ discount.name }}</td>
-        <td colspan="6">-{{ discount.discount|currency }}</td>
+        <td colspan="7">{{ discount.name }}</td>
+        <td colspan="7">-{{ discount.discount|currency }}</td>
     </tr>
     {% endfor %}
     <tr>
-        <td colspan="5">Total</td>
+        <td colspan="6">Total</td>
         <td>{{ basket.total_excl_tax|currency }}</td>
         <td>{{ basket.total_incl_tax|currency }}</td>
     </tr>
@@ -124,15 +133,28 @@ Your basket is currently empty - go and <a href="{% url oscar-products %}">buy s
 <h3>To buy later</h3>
 <table>
     <tr>
+        <th></th>
         <th>Product</th>
         <th>Unit price excl tax</th>
         <th>Unit price tax</th>
         <th>Line price excl tax</th>
         <th>Line price incl tax</th>
+        <th></th>
     </tr>
     {% for line in saved_basket.lines.all %}
     <tr>
+        <td>
+            {% for image in line.product.images.all %}
+                {% thumbnail image.original "100" crop="center" as im %}
+                    <a href="{{ line.product.get_absolute_url }}"><img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"></a>
+                {% endthumbnail %}
+            {% endfor %}
+        </td>
         <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
+        <td>{{ line.unit_price_excl_tax|currency }}</td>
+        <td>{{ line.unit_tax|currency }}</td>
+        <td>{{ line.line_price_excl_tax|currency }}</td>
+        <td>{{ line.line_price_incl_tax|currency }}</td>
         <td>
             <form action="{% url oscar-saved-basket-line line.line_reference %}" method="post">
                 {% csrf_token %}
@@ -145,10 +167,6 @@ Your basket is currently empty - go and <a href="{% url oscar-products %}">buy s
                 <input type="submit" value="Move to basket" />
             </form>
         </td>
-        <td>{{ line.unit_price_excl_tax|currency }}</td>
-        <td>{{ line.unit_tax|currency }}</td>
-        <td>{{ line.line_price_excl_tax|currency }}</td>
-        <td>{{ line.line_price_incl_tax|currency }}</td>
     </tr>
     {% endfor %}
     
