Major tidy-up of reviews branch.
Move into product app
Rewrote views to use generic classes
Tidied up POST actions of forms

--- a/oscar/templates/oscar/product/detail.html
+++ b/oscar/templates/oscar/product/detail.html
@@ -5,7 +5,7 @@
 {% load thumbnail %}
 
 {% block header %}
-<h2>{{item.get_title}}</h2>
+<h2>{{ item.get_title }}</h2>
 {% endblock header %}
 
 
@@ -29,7 +29,7 @@
     <tr>
         <th>Product class</th><td><a href="{{ item.item_class.get_absolute_url }}">{{item.item_class.name}}</a></td>
     </tr>
-{% if item.stockrecord %}
+    {% if item.stockrecord %}
     <tr>
         <th>Price (excl. tax)</th><td>{{item.stockrecord.price_incl_tax|currency}}</td>
     </tr>
@@ -40,7 +40,7 @@
         <th>Availability</th>
         <td>{{ item.stockrecord.availability }}</td>
     </tr>
-{% endif %}
+    {% endif %}
     <tr>
         <th>Product type</th>
         <td>
@@ -52,11 +52,12 @@
         <th>{{ attribute.type.name }}</th>
         <th>{{ attribute.value }}</th>
     </tr>
-    <tr>
-        <td><a href="{{ item.get_absolute_url }}add-review/"> Add a review</a></td>
-        <td><a href="{{ item.get_absolute_url }}reviews/"> See all reviews</a></td>
-    </tr>
     {% endfor %}
+    <tr>
+        <td><a href="{% url oscar-product-review-add item.item_class.slug item.slug item.id %}">Add a review</a></td>
+        <td><a href="{% url oscar-product-reviews item.item_class.slug item.slug item.id %}">See all reviews</a></td>
+    </tr>
+    
 </table>
 
 {% if item.stockrecord %}
@@ -66,8 +67,6 @@
     <input type="submit" value="Add to basket" />
 </form>
 {% endif %}
-
-{% recently_viewed_products %}
 
 {% if item.related_items.count %}
 <div class="products">
@@ -93,39 +92,37 @@
 
 {% block product_review %}
 
-{% if reviews %}
-	{% if avg_score %}
-		<h3> Product Reviews </h3>
-		<h4> Average score: {{ avg_score|floatformat:1  }} / 5.0 </h4>
-	{% endif %}
-	{% for review in reviews|slice:":5" %}		
-		<h4> {{ forloop.counter}}. {{ review.title }} </h4>
-		<p> Score: {{ review.score|floatformat:1 }} / 5.0</p>
-		<p> Comments: {{ review.body|truncatewords:50 }}</p>		
-		<p> Date created: {{ review.date_created }}</p>
-		<a href="{{ review.get_absolute_url }}"> View full review</a>			
-	{% if review.total_votes %}
-		<h5> {{ review.get_upvotes }} out of {{ review.total_votes }} customers found this review useful.</h5>
-	{% endif %}
-	{% if user.is_anonymous %}
-		<h5> Please log-in to rate this review.</h5>
-	{% endif %}	
-	{% if user.is_authenticated %}		
-		<h4> Was this review helpful to you? </h4>
-		<form  action="{{ review.get_vote_url }}" method="post">
-			{% csrf_token %}               
-            <input type="hidden" name="action" id="action_id" value="voteup"/>
-            <input type="submit" value="Yes" /> 
-        </form>
-		<form  action="{{ review.get_vote_url }}" method="post">
-			{% csrf_token %}                
-            <input type="hidden" name="action" id="action_id" value="votedown"/>
-            <input type="submit" value="No" /> 
-        </form>
-	{% endif %}			
-	{% endfor %}
-{% endif %}
+    {% if reviews %}
+    	<h3> Product Reviews </h3>
+    	<h4> Average score: {{ avg_score|floatformat:1  }} / 5.0 </h4>
+    	{% for review in reviews|slice:":5" %}		
+    		<h4> {{ forloop.counter}}. {{ review.title }} </h4>
+    		<p> Score: {{ review.score|floatformat:1 }} / 5.0</p>
+    		<p> Comments: {{ review.body|truncatewords:50 }}</p>		
+    		<p> Date created: {{ review.date_created }}</p>
+    		<a href="{{ review.get_absolute_url }}">View full review</a>			
+            {% if review.has_votes %}
+            	<h5> {{ review.num_up_votes }} out of {{ review.total_votes }} customers found this review useful.</h5>
+            {% endif %}
+            {% if user.is_authenticated %}
+        		<h4>Was this review helpful to you?</h4>
+        		<form action="{{ review.get_absolute_url }}" method="post">
+        			{% csrf_token %}               
+                    <input type="hidden" name="action" value="vote_up"/>
+                    <input type="submit" value="Yes" /> 
+                </form>
+        		<form  action="{{ review.get_absolute_url }}" method="post">
+        			{% csrf_token %}                
+                    <input type="hidden" name="action" value="vote_down"/>
+                    <input type="submit" value="No" /> 
+                </form>
+    	    {% endif %}			
+    	{% endfor %}
+    {% endif %}
+
 {% endblock product_review %}
+
+{% recently_viewed_products %}
 
 {% endblock content %}
 
