--- a/oscar/templates/oscar/reviews/add_review.html
+++ b/oscar/templates/oscar/reviews/add_review.html
@@ -1,68 +1,12 @@
-{% extends "layout.html" %}
+{% extends "oscar/product/detail.html" %}
 
-{% load currency_filters %}
+{% block product_review %}
 
-{% block header %}
-<h2>{{item.get_title}}</h2>
-{% endblock header %}
+    <h4>Leave a product review</h4>
+    <form method="post" action="{% url oscar-product-review-add item.item_class.slug item.slug item.id %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Submit" /> 
+    </form>
 
-{% block content%}
-
-<div class="images">
-    {% for image in item.images.all %}
-    <img src="{{ image.fullsize_url }}" title="{{ item.get_title }}" />
-    <div class="caption">{{ image.caption }}</div>
-    {% endfor %}
-</div>
-
-<table>
-    <caption>Product details</caption>
-    <tr>
-        <th>UPC</th><td>{{item.upc}}</td>
-    </tr>
-    <tr>
-        <th>Product class</th><td><a href="{{ item.item_class.get_absolute_url }}">{{item.item_class.name}}</a></td>
-    </tr>
-{% if item.stockrecord %}
-    <tr>
-        <th>Price (excl. tax)</th><td>{{item.stockrecord.price_incl_tax|currency}}</td>
-    </tr>
-    <tr>
-        <th>Price (incl. tax)</th><td>{{item.stockrecord.price_excl_tax|currency}}</td>
-    </tr>
-    <tr>
-        <th>Availability</th>
-        <td>{{ item.stockrecord.availability }}</td>
-    </tr>
-{% endif %}
-    <tr>
-        <th>Product type</th>
-        <td>
-        {% if item.is_group %}Product group{% else %}{% if item.is_variant %}Variant{% else %}Stand-alone{% endif %}{% endif %}
-        </td>
-    </tr>
-    {% for attribute in item.attributes.all %}
-    <tr>
-        <th>{{ attribute.type.name }}</th>
-        <th>{{ attribute.value }}</th>
-    </tr>
-    {% endfor %}
-</table>
-
-{% if item.stockrecord %}
-<form action="{% url oscar-basket %}" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Add to basket" />
-</form>
-{% endif %}
-
-
-
-<h4>Leave a product review</h4>
-<form method="post" action="">
-	{% csrf_token %}
-    {{ review_form.as_p }}
-     <input type="submit" value="Submit" /> 
-</form>
-{% endblock content %}
+{% endblock %}
