--- a/oscar/templates/oscar/reviews/reviews.html
+++ b/oscar/templates/oscar/reviews/reviews.html
@@ -1,17 +1,17 @@
 {% extends "oscar/product/detail.html" %}
 
 {% block product_review %}
+
 {% if reviews %}
 	{% if avg_score %}
 		<h3> All Product Reviews ({{ reviews.count }}) </h3>
 		<h4> Sort by: </h4>
-		<form  action="{{ request.get_full_path }}" method="get">
-			{% csrf_token %}
+		<form action="{{ request.get_full_path }}" method="get">
             <select name="sort_by">
-            	<option value="score"> Score </option>
-            	<option value="recency"> Recency </option>
-            	<input type="submit" value="Go" /> 
-            </select>            
+            	<option value="score">Score</option>
+            	<option value="recency">Recency</option>
+            </select>
+            <input type="submit" value="Go" />             
         </form>
 		<h4> Average score: {{ avg_score|floatformat:1  }} / 5.0 </h4>
 	{% endif %}
@@ -22,24 +22,28 @@
 		<p> Date created: {{ review.date_created }}</p>		
 	{% endfor %}
 	
-{% if page_obj %}
-<div class="pagination">
-    <span class="step-links">
+    {% if page_obj %}
+    <div class="pagination">
+        <span class="step-links">
+        
+            {% if page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            {% endif %}
     
-        {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-        {% endif %}
-
-        <span class="current">
-            Page {{ page_obj.number }} of {{ paginator.num_pages }}.
+            <span class="current">
+                Page {{ page_obj.number }} of {{ paginator.num_pages }}.
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">Next</a>
+            {% endif %}
         </span>
+    </div>
+    {% endif %}
+		
+{% else %}
 
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">Next</a>
-        {% endif %}
-    </span>
-</div>
-{% endif %}
-							
+<p>This product does not have any reviews yet.</p>        
+        					
 {% endif %}
 {% endblock %}
