--- a/oscar/templates/oscar/customer/order.html
+++ b/oscar/templates/oscar/customer/order.html
@@ -72,6 +72,7 @@
                 <input type="hidden" name="action" value="reorder" />
                 <input type="submit" value="Re-order" />
             </form>
+            <a href="{% url oscar-product-review-add line.product.item_class.slug line.product.slug line.product.id %}">Write a review</a>
         </td>
     </tr>
     {% endfor %}
