--- a/oscar/templates/oscar/customer/address-create.html
+++ b/oscar/templates/oscar/customer/address-create.html
@@ -9,11 +9,13 @@
 
 {% block content %}
 
-<h3>Edit address</h3>
+<h3>Add address</h3>
 <form action="." method="post">
     {% csrf_token %}
- 
-    
+
+	<input type="hidden" name="test" value="v1" />
+	<input type="hidden" name="test" value="v2" />	
+
     {{ form.as_p }}
     <input type="submit" value="Save address" />
 </form>
